# starlume

./: .copier-answers.yml  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  common.just  justfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  publish.yml
crates/app-kit/: Cargo.toml
crates/app-kit/src/: lib.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0001_init.sql  0002_groups.sql  0003_friends.sql
crates/server/src/: discord.rs  friends.rs  groups.rs  main.rs
crates/svc-data/: Cargo.toml
crates/svc-data/src/: lib.rs
crates/svc-discovery/: Cargo.toml
crates/svc-discovery/src/: lib.rs  profile.rs
crates/svc-log/: Cargo.toml
crates/svc-log/src/: lib.rs
crates/svc-sync/: Cargo.toml
crates/svc-sync/src/: lib.rs
docs/: memory.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  error.rs  friends.rs  groups.rs  ipc.rs  lib.rs  lifecycle.rs  main.rs  modules.rs  notify.rs  sc.rs  settings.rs  state.rs  suspend.rs
src/lib/: bindings.ts  updater.ts
src/lib/components/: Avatar.svelte  NotificationCenter.svelte  Onboarding.svelte  Toasts.svelte
src/lib/components/onboarding/: OnboardingDiscord.svelte  OnboardingOnline.svelte  OnboardingRsi.svelte
src/lib/modules/: registry.ts  types.ts
src/lib/state/: auth.svelte.ts  notifications.svelte.ts  onboarding.svelte.ts  sc.svelte.ts  settings.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/friends/: +page.svelte
src/routes/me/: +page.svelte
src/routes/settings/: +page.svelte
