[package]
name = "app-kit"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Starlume app plumbing — data-dir resolution, atomic file IO, JSON persistence"

[dependencies]
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
