[package]
name = "starlume-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Starlume server — Discord auth + device tokens (grows into the v2 personal-data/community API)"

[[bin]]
name = "starlume-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
url.workspace = true
sha2.workspace = true
hex.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
