[package]
name = "svc-discovery"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Starlume install service — SC install discovery, RSI identity, profile parsing"

[dependencies]
sc-holotable.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
chrono.workspace = true
scraper.workspace = true
